--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ body{
     /* height: calc(100%-1rem-2rem-2rem); */
     /* background-color: lightsalmon; */
     padding:0.4rem;
+    outline:"none";
 }
 .main-cont{
     display: flex;
@@ -131,5 +132,6 @@ body{
     font-size: 1.5rem;
     height: 2rem;
     padding-right: 1rem;
+    padding-top:.2rem;
     color: rgb(71, 76, 81);
 }
